# rust-practice-projects

./: README.md
1.reversed_string/: Cargo.toml
database/: collections  index
database/src/: lib.rs  main.rs
expense_tracker/: Cargo.toml
expense_tracker/src/: main.rs
notes_api/: .env  Cargo.toml  README.md
notes_api/entity/: Cargo.toml
notes_api/entity/src/: mod.rs  notes.rs  prelude.rs
notes_api/migration/: Cargo.toml
notes_api/migration/src/: lib.rs  m20250221_164131_note_table.rs
notes_api/src/: main.rs  main_error.rs
notes_api/src/routes/: mod.rs  note_routes.rs
notes_api/src/routes/handlers/: mod.rs  note_handler.rs
notes_api/src/routes/handlers/model/: add_note_model.rs  mod.rs  note_model.rs
notes_api/src/utils/: api_response.rs  app_state.rs  constants.rs  mod.rs
number_guessing_game/: Cargo.toml
number_guessing_game/src/: main.rs
password_manager/: Cargo.toml  storage.json
password_manager/src/: cli.rs  main.rs
reversed_string/src/: main.rs
string_split_iterator/: .gitignore  Cargo.toml
string_split_iterator/src/: main.rs
task_manager/: .env  Cargo.toml
task_manager/entity/: Cargo.toml
task_manager/entity/src/: mod.rs  prelude.rs  task.rs
task_manager/migration/: Cargo.toml
task_manager/migration/src/: lib.rs  m20250316_111423_note.rs
task_manager/src/: main.rs
task_manager/src/routes/: mod.rs  task_manager.rs
task_manager/src/routes/handlers/: mod.rs  task_manager_handler.rs
task_manager/src/utils/: api_response.rs  constants.rs
to_Do_List/: Cargo.toml
word_frequency_counter/: .gitignore  Cargo.toml
(+14 files in other folders)
