[package]
name = "notes_api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } 
actix-web = "4.9.0"
lazy_static = "1.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sea-orm = { version = "1.1.5", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
env_logger = "0.11.6"


